--- a/FencingSchoolDB/pom.xml
+++ b/FencingSchoolDB/pom.xml
@@ -26,6 +26,12 @@
             <version>1.18.26</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.14.1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
